# empwage/src/routes/payroll.routes.js
@@ -1,13 +1,12 @@
 import express from 'express';
 import * as empController from '../controllers/payroll.controller';
-import { newUserValidator } from '../validators/user.validator';
-import  {empAuth}  from '../middlewares/auth.middleware';
+import * as Validator from '../validators/employee.validator';
+import { empAuth } from '../middlewares/auth.middleware';
 
-const router = express.Router();
-
-router.post('/addEmployee',empAuth, empController.addEmployee);
-router.get('/getEmployee',empAuth, empController.getEmployee);
-router.delete('/deleteEmployee',empAuth, empController.deleteEmployee);
-router.put('/updateEmployee',empAuth, empController.updateEmployee);
+const router = express.Router();    
+router.post('/addEmployee', Validator.addEmployeeValidator, empAuth, empController.addEmployee);
+router.get('/getEmployee', empAuth, empController.getEmployee);
+router.delete('/deleteEmployee', empAuth, empController.deleteEmployee);
+router.put('/updateEmployee', empAuth, empController.updateEmployee);
 
 export default router;
